--- a/EventRole/EventRole.nuspec
+++ b/EventRole/EventRole.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata> 
     <id>EventHubProcessor</id>
-    <title>RenWeb</title>
+    <title>LMS</title>
     <version>1.0.0</version>
     <authors>RW Devs</authors>
     <owners>RenWeb Inc.</owners>
