--- a/MessageHandleApi/MessageHandleApi.csproj
+++ b/MessageHandleApi/MessageHandleApi.csproj
@@ -257,6 +257,9 @@
     <Content Include="Metadata\deploymentTemplates\apiappconfig.azureresource.json" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+    <None Include="Web.Test.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\autofac.cs" />
