--- a/MessageHandleApi.Test/MessageHandleApi.Test.csproj
+++ b/MessageHandleApi.Test/MessageHandleApi.Test.csproj
@@ -89,7 +89,6 @@
     </Compile>
     <Compile Include="Calculator.cs" />
     <Compile Include="LMS\CalSteps.cs" />
-    <Compile Include="Controllers\LMSController_Test.cs" />
     <Compile Include="Controllers\ElasticSearchController_Test.cs" />
     <Compile Include="Controllers\ElasticAggragationController_Test.cs" />
     <Compile Include="Controllers\TestData.cs" />
@@ -101,6 +100,7 @@
     </Compile>
     <Compile Include="LMS\LmsSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LmsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LMS.Common\LMS.Common.csproj">
