--- a/LMS.Common/LMS.Common.csproj
+++ b/LMS.Common/LMS.Common.csproj
@@ -139,7 +139,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\ASoperation.cs" />
     <Compile Include="DAL\FBoperation.cs" />
+    <Compile Include="DAL\IASoperation.cs" />
     <Compile Include="DAL\IFBoperation.cs" />
     <Compile Include="Models\Api\LMSapi.cs" />
     <Compile Include="Models\AzureDocumentDB.cs" />
@@ -152,7 +154,6 @@
     <Compile Include="Models\ELS\QueryInfo.cs" />
     <Compile Include="Models\MetricEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\AzureStorageService.cs" />
     <Compile Include="DAL\DBoperation.cs" />
     <Compile Include="Service\CollectionService.cs" />
     <Compile Include="Service\LmsDashboardService.cs" />
@@ -164,7 +165,6 @@
     <Compile Include="Service\DBService.cs" />
     <Compile Include="Service\RetryService.cs" />
     <Compile Include="Service\ELSService.cs" />
-    <Compile Include="Service\Interface\IAzureStorageService.cs" />
     <Compile Include="DAL\IDBoperation.cs" />
     <Compile Include="Service\Interface\IDBService.cs" />
     <Compile Include="Service\Interface\IELSService.cs" />
